@@ -12,7 +12,7 @@ public class HCS08data
     { "DD", "B2", "$%02X, $%02X" },             { "Ext", "B2", "$%02X%02X", "0"}, 
     { "DIxp", "B1", "$%02X, X+" },              { "IxpD", "B1", "X+, $%02X" },
     { "SP1", "B1", "$%02X, SP" },               { "SP1r", "B2", "$%02X, SP, $%04X", "2"}, 
-    { "SP2", "B2", "$%02X%02X, SP" }
+    { "SP2", "B2", "$%02X%02X, SP" },           { "EQU", "", "$%04X" }
   };
 
 
