@@ -1384,7 +1384,7 @@ Code.S3C80=43 8B 31 8B 12 CF 44 08 08 01 18 01 06 01 18 03 39 D2 DC 11 94 08 B6 
 Code.740=0B 1A 31 80 15 F6 B8 01 16 08 08 01 A1 03 17 69 78 54 06 C7 02 08 01 01 03 DB E6 5B 3C 02 5C 97 5D 05 7F 7F 3C AE 73 57 5D 17 22 10 D0 13 A7 5D 04 E6 5B 80 0C A9 80 45 5E 85 5E A9 80 45 5F 85 5F B7 5D 03 3C EE 7E 07 5D 20 77 5D 04 22 09 90 19 37 5D 02 22 00 97 5D 0F 22 00 3C C0 7E 44 5E 3C 01 6B 22 06 90 03 60 4F 7F 2F 7F 4C 00 FF
 Code.6805-C9=0B 1A 31 20 15 F6 F8 00 16 08 08 01 A3 03 18 34 0F 56 06 C3 02 08 7C 98 03 D8 3C 58 A6 02 B7 59 09 5A 06 17 7C A6 AE B7 70 0A 5A 07 CD 01 AD 25 02 3C 58 0B 5A 04 A6 EE B7 7B 00 5A 2B 07 5A 05 CD 01 86 24 23 09 5A 1E CD 01 83 A6 06 AE 89 CD 01 9F A6 C0 B7 7B 33 5B A6 01 B7 68 B6 75 BE 75 B7 6E BF 6F 20 02 14 7C 12 7C CD 01 83 81
 Code.6805-RC16/18=11 24 31 20 14 CF 4D 08 08 00 8B 8D 01 8B A7 69 78 00 84 C9 65 00 44 64 65 3C 58 05 5A 1E CD 01 A1 25 19 0A 5A 08 B6 5C B7 5B 33 5C 20 16 A6 80 B8 5B B7 5B A6 80 B8 5C B7 5C 20 08 0A 5A 05 B6 5B 43 B7 5C B6 5D 43 B7 5E 3C DD 07 5A 05 CD 01 83 24 03 01 5A 02 17_7C 08 5A 03 CC 01 B2 AE 04 E6_74 E7_70 5A 26 F9 00 5A F1 A6 44 B7_7C CD 01 B2 A6 C1 B7_7B 10_7C 33 5B A6 01 B7_67 CC 01 AF
-Code.HCS08=20 15 22 47 31 CF 44 08 08 01 17 01 1A 01 17 03 4D D2 F0 11 93 08 CA 3C AC 05 60 1D CD FF 98 24 18 0A 60 07 4E 62 61 33 62 20 16 B6 61 A8 80 B7 61 B6 62 A8 80 B7 62 20 08 0A 60 05 4E 61 62 33 62 4E 63 64 33 64 6E 02 AA 07 60 05 CD FF 8F 25 10 08 60 12 03 60 05 AD 0A CD FF 5F 00 60 02 16 A3 10 A3 CC FF 5C 55 78 35 76 00 60 F4 AD F4 6E C1 A2 33 61 6E 01 6A 20
+Code.HCS08=20 15 22 47 31 CF 44 08 08 01 17 01 1A 01 17 03 4D D2 F0 11 93 08 CA 3C AC 05 60 1D CD FF 98 24 18 0A 60 07 4E 62 61 33 62 20 16 B6 61 A8 80 B7 61 B6 62 A8 80 B7 62 20 08 0A 60 05 4E 61 62 33 62 4E 63 64 33 64 6E 02 AA 07 60 05 CD FF 8F 25 10 08 60 12 03 60 05 AD 0A CD FF 5F 00 60 02 16 A3 10 A3 CC FF 5C 55 78 35 76 00 60 F4 AD F4 6E C1 A2 33 61 6E 01 6A 20 E8
 
 [NEC2]
 PID=00 5A
